fix: added basename for GitHub Pages routing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "fullstack-project5",
+  "homepage": "https://shiraz-cohen.github.io/project-5",
+  "name": "project-5",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +16,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
@@ -36,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "react-router-dom": "^6.11.1"
   }
 }
